less/site.less
@import "~bootstrap/less/bootstrap";

body, html {
  overflow: hidden;
}

body {
  padding-top: 50px;
  background-color: #1E1E1E;
  color: #C1C2C3
}

.nav-sidebar {
  margin-right: -21px; /* 20px padding + 1px border */
  margin-bottom: 20px;
  margin-left: -20px;
}
.nav-sidebar > li > a {
  padding-right: 20px;
  padding-left: 20px;
}
.nav-sidebar > .active > a,
.nav-sidebar > .active > a:hover,
.nav-sidebar > .active > a:focus {
  background-color: #428bca;
  color: white;
}

.navbar-inverse {
  border-color: #555555;
}

input.command-bar {
  width: 100%;
  background-color: #333333;
  border-color: #555555;
  border-style: solid;
  color: #C1C2C3
}

div.command-bar {
  padding-left: 0px;
  padding-right: 0px;
}

.text-window {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 30px;
  top: 50px;
  color: #C1C2C3;
  overflow-y: auto;
}

.footer {
  position: fixed;
  bottom: 0;
  right: 0;
  width: 100%;
}

.channel-list {
  position: fixed;
  top: 51px;
  bottom: 0;
  left: 0;
  z-index: 1000;
  display: block;
  overflow-x: hidden;
  overflow-y: auto;
  border-right: 1px solid #555555;
  background-color: #252526;
}

.user-list {
  position: fixed;
  top: 51px;
  bottom: 0;
  right: 0;
  z-index: 1000;
  display: block;
  overflow-x: hidden;
  overflow-y: auto;
  border-left: 1px solid #555555;
  background-color: #252526;  
}

.login {
  margin-top: 10px;
}

.topic {
  border: 1px solid #555555; 
  margin-top: 1px; 
  margin-left: -15px; 
  margin-right: -15px; 
  background: #333333;
  min-height: 30px;
  padding-top: 4px;
  padding-bottom: 4px;
}

